# timezone-table

./: CLAUDE.md  LICENSE  README.ko.md  README.md  cities.json  pyproject.toml  timezone_table.py
.github/workflows/: ci.yml  meeting-time.yml
tests/: test_timezone_table.py
